--- a/config.json
+++ b/config.json
@@ -7,9 +7,9 @@
     },
 
     "train": {
-        "train_image_folder":   "./datasets/trainingsets/image/",
-        "train_annot_folder":   "./datasets/trainingsets/xml/",
-        "cache_name":           "rsd_train.pkl",
+        "train_image_folder":   "datasets/trainingsets/image/",
+        "train_annot_folder":   "datasets/trainingsets/xml/",
+        "cache_name":           "cache/rsd_train.pkl",
 
         "train_times":          1,
         "batch_size":           1,
@@ -25,15 +25,15 @@
         "xywh_scale":           1,
         "class_scale":          1,
 
-        "tensorboard_dir":      "./logs",
-        "saved_weights_name":   "rsd.h5",
+        "tensorboard_dir":      "logs",
+        "saved_weights_name":   "model/rsd.h5",
         "debug":                true
     },
 
     "valid": {
-        "valid_image_folder":   "./datasets/validationsets/image/",
-        "valid_annot_folder":   "./datasets/validationsets/xml/",
-        "cache_name":           "rsd_valid.pkl",
+        "valid_image_folder":   "datasets/validationsets/image/",
+        "valid_annot_folder":   "datasets/validationsets/xml/",
+        "cache_name":           "cache/rsd_valid.pkl",
 
         "valid_times":          1
     }
