--- a/config.json
+++ b/config.json
@@ -17,7 +17,7 @@
         "nb_epochs":            200,
         "warmup_epochs":        3,
         "ignore_thresh":        0.5,
-        "gpus":                 "0",
+        "gpus":                 "",
 
         "grid_scales":          [1,1,1],
         "obj_scale":            5,
@@ -27,7 +27,7 @@
 
         "tensorboard_dir":      "logs",
         "saved_weights_name":   "model/rsd.h5",
-        "debug":                true
+        "debug":                false
     },
 
     "valid": {
