--- a/config.json
+++ b/config.json
@@ -17,7 +17,7 @@
         "nb_epochs":            200,
         "warmup_epochs":        3,
         "ignore_thresh":        0.5,
-        "gpus":                 "",
+        "gpus":                 "0",
 
         "grid_scales":          [1,1,1],
         "obj_scale":            5,
