--- a/requirements-notebook.txt
+++ b/requirements-notebook.txt
@@ -2,7 +2,7 @@ absl-py==1.2.0
 astor==0.8.1
 distlib==0.3.6
 filelock==3.8.0
-gast==0.3.3
+gast==0.2.2
 google-pasta==0.2.0
 grpcio==1.48.1
 h5py==2.10.0
@@ -12,7 +12,7 @@ Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
 Markdown==3.4.1
 MarkupSafe==2.1.1
-numpy==1.20
+numpy==1.18.5
 opencv-python==4.6.0.66
 opt-einsum==3.3.0
 platformdirs==2.5.2
@@ -22,6 +22,7 @@ scipy==1.7.3
 six==1.16.0
 tensorboard==1.15.0
 tensorflow-estimator==1.15.1
+tensorflow-gpu==1.15.5
 termcolor==1.1.0
 Theano==1.0.5
 tqdm==4.64.1
